tests/macros/confirm/validate.rs
fn main() {
    let q = discourse::questions![Confirm { validate: todo!() }];
}
